contoso-supermarket/ingress/contosopos_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contosopos-ingress
  namespace: contosopos
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: contosopos
            port: 
              number: 5000
